qtiscoringengine/src/main/java/tinyequationscoringengine/antlr/SympyParser.java
/*******************************************************************************
 * Educational Online Test Delivery System 
 * Copyright (c) 2014 American Institutes for Research
 *     
 * Distributed under the AIR Open Source License, Version 1.0 
 * See accompanying file AIR-License-1_0.txt or at
 * 
 * http://www.smarterapp.org/documents/American_Institutes_for_Research_Open_Source_Software_License.pdf
 ******************************************************************************/
// $ANTLR 3.5.2 Sympy.g3 2015-01-02 14:17:11

package tinyequationscoringengine.antlr;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class SympyParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "CALL", "DIV", "ELIST", 
		"EXPR", "FLOAT", "ID", "INT", "MULT", "NEWLINE", "PLUS", "POW", "REL", 
		"SUB", "UNARY_MINUS", "WS", "'('", "')'", "','", "'-'", "'/'", "'Eq'", 
		"'Ge'", "'Gt'", "'Le'", "'Lt'", "'Ne'", "'_'"
	};
	public static final int EOF=-1;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int ASSIGN=4;
	public static final int CALL=5;
	public static final int DIV=6;
	public static final int ELIST=7;
	public static final int EXPR=8;
	public static final int FLOAT=9;
	public static final int ID=10;
	public static final int INT=11;
	public static final int MULT=12;
	public static final int NEWLINE=13;
	public static final int PLUS=14;
	public static final int POW=15;
	public static final int REL=16;
	public static final int SUB=17;
	public static final int UNARY_MINUS=18;
	public static final int WS=19;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public SympyParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public SympyParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return SympyParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Sympy.g3"; }


	private int _depth = 0;


	public static class rel_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "rel"
	// Sympy.g3:36:1: rel : ( 'Eq' | 'Le' | 'Lt' | 'Ge' | 'Gt' | 'Ne' );
	public final SympyParser.rel_return rel() throws RecognitionException {
		SympyParser.rel_return retval = new SympyParser.rel_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken set1=null;

		CommonTree set1_tree=null;

		try {
			// Sympy.g3:37:2: ( 'Eq' | 'Le' | 'Lt' | 'Ge' | 'Gt' | 'Ne' )
			// Sympy.g3:
			{
			root_0 = (CommonTree)adaptor.nil();


			set1=(CommonToken)input.LT(1);
			if ( (input.LA(1) >= 25 && input.LA(1) <= 30) ) {
				input.consume();
				if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set1));
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "rel"


	public static class exprList_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "exprList"
	// Sympy.g3:45:1: exprList : ( expr ( ',' expr )* -> ^( ELIST ( expr )+ ) | -> ELIST );
	public final SympyParser.exprList_return exprList() throws RecognitionException {
		SympyParser.exprList_return retval = new SympyParser.exprList_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken char_literal3=null;
		ParserRuleReturnScope expr2 =null;
		ParserRuleReturnScope expr4 =null;

		CommonTree char_literal3_tree=null;
		RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// Sympy.g3:46:5: ( expr ( ',' expr )* -> ^( ELIST ( expr )+ ) | -> ELIST )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( ((LA2_0 >= FLOAT && LA2_0 <= INT)||LA2_0==20||LA2_0==23||(LA2_0 >= 25 && LA2_0 <= 30)) ) {
				alt2=1;
			}
			else if ( (LA2_0==21) ) {
				alt2=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// Sympy.g3:46:9: expr ( ',' expr )*
					{
					pushFollow(FOLLOW_expr_in_exprList186);
					expr2=expr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_expr.add(expr2.getTree());
					// Sympy.g3:46:14: ( ',' expr )*
					loop1:
					while (true) {
						int alt1=2;
						int LA1_0 = input.LA(1);
						if ( (LA1_0==22) ) {
							alt1=1;
						}

						switch (alt1) {
						case 1 :
							// Sympy.g3:46:15: ',' expr
							{
							char_literal3=(CommonToken)match(input,22,FOLLOW_22_in_exprList189); if (state.failed) return retval; 
							if ( state.backtracking==0 ) stream_22.add(char_literal3);

							pushFollow(FOLLOW_expr_in_exprList191);
							expr4=expr();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) stream_expr.add(expr4.getTree());
							}
							break;

						default :
							break loop1;
						}
					}

					// AST REWRITE
					// elements: expr
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 46:26: -> ^( ELIST ( expr )+ )
					{
						// Sympy.g3:46:29: ^( ELIST ( expr )+ )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ELIST, "ELIST"), root_1);
						if ( !(stream_expr.hasNext()) ) {
							throw new RewriteEarlyExitException();
						}
						while ( stream_expr.hasNext() ) {
							adaptor.addChild(root_1, stream_expr.nextTree());
						}
						stream_expr.reset();

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// Sympy.g3:47:9: 
					{
					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 47:9: -> ELIST
					{
						adaptor.addChild(root_0, (CommonTree)adaptor.create(ELIST, "ELIST"));
					}


					retval.tree = root_0;
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "exprList"


	public static class expression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// Sympy.g3:51:1: public expression : expr WS -> ^( EXPR expr ) ;
	public final SympyParser.expression_return expression() throws RecognitionException {
		SympyParser.expression_return retval = new SympyParser.expression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken WS6=null;
		ParserRuleReturnScope expr5 =null;

		CommonTree WS6_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// Sympy.g3:52:5: ( expr WS -> ^( EXPR expr ) )
			// Sympy.g3:52:9: expr WS
			{
			pushFollow(FOLLOW_expr_in_expression235);
			expr5=expr();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_expr.add(expr5.getTree());
			WS6=(CommonToken)match(input,WS,FOLLOW_WS_in_expression237); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_WS.add(WS6);

			// AST REWRITE
			// elements: expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 52:17: -> ^( EXPR expr )
			{
				// Sympy.g3:52:20: ^( EXPR expr )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(EXPR, "EXPR"), root_1);
				adaptor.addChild(root_1, stream_expr.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expression"


	public static class expr_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// Sympy.g3:55:1: expr : relExpr ;
	public final SympyParser.expr_return expr() throws RecognitionException {
		SympyParser.expr_return retval = new SympyParser.expr_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope relExpr7 =null;


		try {
			// Sympy.g3:55:5: ( relExpr )
			// Sympy.g3:55:9: relExpr
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_relExpr_in_expr259);
			relExpr7=relExpr();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, relExpr7.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"


	public static class relExpr_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "relExpr"
	// Sympy.g3:57:1: relExpr : ( rel '(' addExpr ',' addExpr ')' -> ^( rel ( addExpr )+ ) | addExpr );
	public final SympyParser.relExpr_return relExpr() throws RecognitionException {
		SympyParser.relExpr_return retval = new SympyParser.relExpr_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken char_literal9=null;
		CommonToken char_literal11=null;
		CommonToken char_literal13=null;
		ParserRuleReturnScope rel8 =null;
		ParserRuleReturnScope addExpr10 =null;
		ParserRuleReturnScope addExpr12 =null;
		ParserRuleReturnScope addExpr14 =null;

		CommonTree char_literal9_tree=null;
		CommonTree char_literal11_tree=null;
		CommonTree char_literal13_tree=null;
		RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
		RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
		RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
		RewriteRuleSubtreeStream stream_addExpr=new RewriteRuleSubtreeStream(adaptor,"rule addExpr");
		RewriteRuleSubtreeStream stream_rel=new RewriteRuleSubtreeStream(adaptor,"rule rel");

		try {
			// Sympy.g3:57:8: ( rel '(' addExpr ',' addExpr ')' -> ^( rel ( addExpr )+ ) | addExpr )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( ((LA3_0 >= 25 && LA3_0 <= 30)) ) {
				alt3=1;
			}
			else if ( ((LA3_0 >= FLOAT && LA3_0 <= INT)||LA3_0==20||LA3_0==23) ) {
				alt3=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// Sympy.g3:57:12: rel '(' addExpr ',' addExpr ')'
					{
					pushFollow(FOLLOW_rel_in_relExpr272);
					rel8=rel();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_rel.add(rel8.getTree());
					char_literal9=(CommonToken)match(input,20,FOLLOW_20_in_relExpr274); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_20.add(char_literal9);

					pushFollow(FOLLOW_addExpr_in_relExpr276);
					addExpr10=addExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_addExpr.add(addExpr10.getTree());
					char_literal11=(CommonToken)match(input,22,FOLLOW_22_in_relExpr278); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_22.add(char_literal11);

					pushFollow(FOLLOW_addExpr_in_relExpr280);
					addExpr12=addExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_addExpr.add(addExpr12.getTree());
					char_literal13=(CommonToken)match(input,21,FOLLOW_21_in_relExpr282); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_21.add(char_literal13);

					// AST REWRITE
					// elements: rel, addExpr
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 57:44: -> ^( rel ( addExpr )+ )
					{
						// Sympy.g3:57:47: ^( rel ( addExpr )+ )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot(stream_rel.nextNode(), root_1);
						if ( !(stream_addExpr.hasNext()) ) {
							throw new RewriteEarlyExitException();
						}
						while ( stream_addExpr.hasNext() ) {
							adaptor.addChild(root_1, stream_addExpr.nextTree());
						}
						stream_addExpr.reset();

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// Sympy.g3:58:4: addExpr
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_addExpr_in_relExpr296);
					addExpr14=addExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, addExpr14.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "relExpr"


	public static class addExpr_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "addExpr"
	// Sympy.g3:61:1: addExpr : mulExpr ( ( '+' ^| '-' ^) mulExpr )* ;
	public final SympyParser.addExpr_return addExpr() throws RecognitionException {
		SympyParser.addExpr_return retval = new SympyParser.addExpr_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken char_literal16=null;
		CommonToken char_literal17=null;
		ParserRuleReturnScope mulExpr15 =null;
		ParserRuleReturnScope mulExpr18 =null;

		CommonTree char_literal16_tree=null;
		CommonTree char_literal17_tree=null;

		try {
			// Sympy.g3:62:5: ( mulExpr ( ( '+' ^| '-' ^) mulExpr )* )
			// Sympy.g3:62:9: mulExpr ( ( '+' ^| '-' ^) mulExpr )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_mulExpr_in_addExpr312);
			mulExpr15=mulExpr();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, mulExpr15.getTree());

			// Sympy.g3:62:17: ( ( '+' ^| '-' ^) mulExpr )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==PLUS||LA5_0==23) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// Sympy.g3:62:18: ( '+' ^| '-' ^) mulExpr
					{
					// Sympy.g3:62:18: ( '+' ^| '-' ^)
					int alt4=2;
					int LA4_0 = input.LA(1);
					if ( (LA4_0==PLUS) ) {
						alt4=1;
					}
					else if ( (LA4_0==23) ) {
						alt4=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae =
							new NoViableAltException("", 4, 0, input);
						throw nvae;
					}

					switch (alt4) {
						case 1 :
							// Sympy.g3:62:19: '+' ^
							{
							char_literal16=(CommonToken)match(input,PLUS,FOLLOW_PLUS_in_addExpr316); if (state.failed) return retval;
							if ( state.backtracking==0 ) {
							char_literal16_tree = (CommonTree)adaptor.create(char_literal16);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal16_tree, root_0);
							}

							}
							break;
						case 2 :
							// Sympy.g3:62:26: '-' ^
							{
							char_literal17=(CommonToken)match(input,23,FOLLOW_23_in_addExpr321); if (state.failed) return retval;
							if ( state.backtracking==0 ) {
							char_literal17_tree = (CommonTree)adaptor.create(char_literal17);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal17_tree, root_0);
							}

							}
							break;

					}

					pushFollow(FOLLOW_mulExpr_in_addExpr325);
					mulExpr18=mulExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, mulExpr18.getTree());

					}
					break;

				default :
					break loop5;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "addExpr"


	public static class mulExpr_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "mulExpr"
	// Sympy.g3:65:1: mulExpr : unrExpr ( ( '*' ^| '/' ^) unrExpr )* ;
	public final SympyParser.mulExpr_return mulExpr() throws RecognitionException {
		SympyParser.mulExpr_return retval = new SympyParser.mulExpr_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken char_literal20=null;
		CommonToken char_literal21=null;
		ParserRuleReturnScope unrExpr19 =null;
		ParserRuleReturnScope unrExpr22 =null;

		CommonTree char_literal20_tree=null;
		CommonTree char_literal21_tree=null;

		try {
			// Sympy.g3:66:5: ( unrExpr ( ( '*' ^| '/' ^) unrExpr )* )
			// Sympy.g3:66:9: unrExpr ( ( '*' ^| '/' ^) unrExpr )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_unrExpr_in_mulExpr346);
			unrExpr19=unrExpr();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, unrExpr19.getTree());

			// Sympy.g3:66:17: ( ( '*' ^| '/' ^) unrExpr )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==MULT||LA7_0==24) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// Sympy.g3:66:18: ( '*' ^| '/' ^) unrExpr
					{
					// Sympy.g3:66:18: ( '*' ^| '/' ^)
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==MULT) ) {
						alt6=1;
					}
					else if ( (LA6_0==24) ) {
						alt6=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae =
							new NoViableAltException("", 6, 0, input);
						throw nvae;
					}

					switch (alt6) {
						case 1 :
							// Sympy.g3:66:19: '*' ^
							{
							char_literal20=(CommonToken)match(input,MULT,FOLLOW_MULT_in_mulExpr350); if (state.failed) return retval;
							if ( state.backtracking==0 ) {
							char_literal20_tree = (CommonTree)adaptor.create(char_literal20);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal20_tree, root_0);
							}

							}
							break;
						case 2 :
							// Sympy.g3:66:26: '/' ^
							{
							char_literal21=(CommonToken)match(input,24,FOLLOW_24_in_mulExpr355); if (state.failed) return retval;
							if ( state.backtracking==0 ) {
							char_literal21_tree = (CommonTree)adaptor.create(char_literal21);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal21_tree, root_0);
							}

							}
							break;

					}

					pushFollow(FOLLOW_unrExpr_in_mulExpr359);
					unrExpr22=unrExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, unrExpr22.getTree());

					}
					break;

				default :
					break loop7;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "mulExpr"


	public static class unrExpr_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "unrExpr"
	// Sympy.g3:69:1: unrExpr : (op= '-' unrExpr -> ^( UNARY_MINUS[$op] unrExpr ) | supExpr );
	public final SympyParser.unrExpr_return unrExpr() throws RecognitionException {
		SympyParser.unrExpr_return retval = new SympyParser.unrExpr_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken op=null;
		ParserRuleReturnScope unrExpr23 =null;
		ParserRuleReturnScope supExpr24 =null;

		CommonTree op_tree=null;
		RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
		RewriteRuleSubtreeStream stream_unrExpr=new RewriteRuleSubtreeStream(adaptor,"rule unrExpr");

		try {
			// Sympy.g3:70:5: (op= '-' unrExpr -> ^( UNARY_MINUS[$op] unrExpr ) | supExpr )
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==23) ) {
				alt8=1;
			}
			else if ( ((LA8_0 >= FLOAT && LA8_0 <= INT)||LA8_0==20) ) {
				alt8=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}

			switch (alt8) {
				case 1 :
					// Sympy.g3:70:9: op= '-' unrExpr
					{
					op=(CommonToken)match(input,23,FOLLOW_23_in_unrExpr382); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_23.add(op);

					pushFollow(FOLLOW_unrExpr_in_unrExpr384);
					unrExpr23=unrExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_unrExpr.add(unrExpr23.getTree());
					// AST REWRITE
					// elements: unrExpr
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 70:24: -> ^( UNARY_MINUS[$op] unrExpr )
					{
						// Sympy.g3:70:27: ^( UNARY_MINUS[$op] unrExpr )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(UNARY_MINUS, op), root_1);
						adaptor.addChild(root_1, stream_unrExpr.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// Sympy.g3:71:9: supExpr
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_supExpr_in_unrExpr404);
					supExpr24=supExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, supExpr24.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "unrExpr"


	public static class supExpr_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "supExpr"
	// Sympy.g3:74:1: supExpr : ( pstExpr -> pstExpr ) ( ( '*' '*' pstExpr -> ^( POW[\"**\"] $supExpr pstExpr ) ) )* ;
	public final SympyParser.supExpr_return supExpr() throws RecognitionException {
		SympyParser.supExpr_return retval = new SympyParser.supExpr_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		CommonToken char_literal26=null;
		CommonToken char_literal27=null;
		ParserRuleReturnScope pstExpr25 =null;
		ParserRuleReturnScope pstExpr28 =null;

		CommonTree char_literal26_tree=null;
		CommonTree char_literal27_tree=null;
		RewriteRuleTokenStream stream_MULT=new RewriteRuleTokenStream(adaptor,"token MULT");
